--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "React App",
+  "short_name": "Assignment 3",
   "name": "Create React App Sample",
   "icons": [
     {
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "https://patelshakil.github.io/react-assignment-3/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
